<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_item"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_primary_items"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:menuCategory="secondary"
        android:title="@string/menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_item_change_state"
                android:icon="@drawable/ic_location"
                android:title="@string/change_state"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_item_change_language"
                android:icon="@drawable/ic_language"
                android:title="@string/change_language"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_item_forms"
                android:icon="@drawable/ic_forms"
                android:title="@string/forms"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_item_rto_offices"
                android:icon="@drawable/ic_office"
                android:title="@string/rto_offices"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_item_process"
                android:icon="@drawable/ic_licence"
                android:title="@string/process_of_driving_licence"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_item_contact_us"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>