<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/que_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.rtotest.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
        <action
            android:id="@+id/action_homeFragment_to_trafficSigns"
            app:destination="@id/trafficSigns" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.rtotest.fragments.QuestionFragment"
        android:label="Question"
        tools:layout="@layout/fragment_question">
        <argument
            android:name="Qno"
            app:argType="integer" />
        <argument
            android:name="question"
            app:argType="string" />
        <argument
            android:name="answer"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.rtotest.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/practiceFragment"
        android:name="com.example.rtotest.fragments.PracticeFragment"
        android:label="@string/practice"
        tools:layout="@layout/fragment_practice" />
    <fragment
        android:id="@+id/trafficSigns"
        android:name="com.example.rtotest.fragments.TrafficSigns"
        android:label="@string/traffic_signs"
        tools:layout="@layout/fragment_traffic_signs" />
</navigation>