<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".fragments.QuestionFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/que_no_questionFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Question 1" />

            <TextView
                android:id="@+id/question_questionFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry"
                tools:text="@string/question" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/answer_questionFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry"
                tools:text="@string/answer" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>